--- a/simuwater/src/main/resources/static/index.html
+++ b/simuwater/src/main/resources/static/index.html
@@ -10,7 +10,8 @@
 
 <h1>SimuWater</h1>
 
-<p id="resultado"></p>
+<h3>Utilizador: <select id="user"></select></h3>
+<input type="button" value="Login" onclick="login()">
 
 </body>
 </html>
