--- a/simuwater/src/main/resources/static/residences.html
+++ b/simuwater/src/main/resources/static/residences.html
@@ -4,14 +4,17 @@
         <meta charset="UTF-8">
         <title> SimuWater </title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="javascripts/indexjs.js"></script>
+        <script src="javascripts/residences.js"></script>
+        
     </head>
 <body>
 
 <h1>SimuWater</h1>
 
-<h3>Utilizador: <select id="user"></select></h3>
-<input type="button" value="Login" onclick="login()">
-
+<h3 id="username"></h3>
+<a href="addResidences.html">Adicionar residência</a>
+<hr>
+<main id="residences">
+</main>
 </body>
 </html>
